twflix/k8s/network/repeater/istio.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: twflix-ui
spec:
  hosts:
  - twflix-ui.acme.com
  - twflix-ui
  gateways:
  - twflix-ui
  http:
  - route:
    - destination:
        host: twflix-ui
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: twflix-ui
spec:
  host: twflix-ui
  subsets:
  - name: primary
    labels:
      release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: twflix-ui
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - twflix-ui.acme.com
